fix: shrink word spacing

--- a/src/features/timer/subcomponents/Contestant/Contestant.module.scss
+++ b/src/features/timer/subcomponents/Contestant/Contestant.module.scss
@@ -95,5 +95,6 @@
     align-items: center;
     justify-content: center;
     white-space: nowrap;
+    word-spacing: -0.25em;
   }
 }
